--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 * {
     padding: 0;
     margin: 0;
@@ -6,28 +6,27 @@
 }
 
 body {
+    font-family: 'Poppins', sans-serif;
     font-size: 16px;
-    background-color: #FF7A78;
+    background-color: hsl(0, 100%, 74%);
     background-image: url(images/bg-intro-desktop.png);
-    background-size: cover;
-    overflow-x: hidden;
+    width: 100%;
 }
 
 .left {
-    position: absolute;
+    position: relative;
     display: block;
-    width: 100vw;
-    top: 38%;
+    width: 500px;
     left: 15%;
+    top: 280px;
 }
 
 h1 {
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
+    font-size: 2.8rem;
     color: #fff;
-    font-size: 45px;
-    line-height: 50px;
-    width: 40vw;
+    line-height: 55px;
 }
 
 p {
@@ -35,6 +34,129 @@ p {
     font-weight: 400;
     color: #fff;
     font-size: 16px;
+    padding-top: 30px;
+    width: 500px;
+    line-height: 25px;
+}
+
+
+/*-----------------------------RIGHT-----------------------*/
+
+.right {
+    position: relative;
+    display: block;
+    width: 500px;
+    top: -100px;
+    left: 53%;
+}
+
+.btn-top {
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    background-color: hsl(248, 32%, 49%);
+    color: white;
+    width: 100%;
+    height: 55px;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 0 8px #d36563;
+    outline: none;
+    cursor: pointer;
+    display: block;
+}
+
+.btn-top:hover {
+    background-color: hsl(250, 34%, 31%);
+}
+
+.container {
+    width: 100%;
+    display: block;
     margin-top: 25px;
-    width: 35vw;
+    background-color: #fff;
+    border-radius: 10px;
+    height: 450px;
+    box-shadow: 0 8px #d36563;
+    box-sizing: border-box;
+}
+
+input {
+    width: 85%;
+    margin: 20px 20px 0px 35px;
+    height: 50px;
+    border-radius: 5px;
+    border: 1.5px solid #ddd;
+    outline: none;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    padding-left: 30px;
+    color: #303030;
+}
+
+input:placeholder-shown {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    color: gray;
+    padding-left: 30px;
+}
+
+input:nth-child(2) {
+    margin-top: 35px;
+}
+
+.btn-bottom {
+    background-color: hsl(154, 59%, 51%);
+    width: 85%;
+    height: 45px;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    border: none;
+    border-radius: 6px;
+    box-shadow: 0 4px #42B380;
+    margin: 20px 20px 0px 35px;
+    outline: none;
+    cursor: pointer;
+}
+
+.btn-bottom:hover {
+    background-color: hsl(154, 57%, 46%);
+}
+
+.box-small {
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.small-letters {
+    font-family: 'Poppins', sans-serif;
+    font-size: .6em;
+    font-weight: 500;
+    color: rgb(182, 182, 182);
+    text-align: center;
+    margin-top: -20px;
+    width: 100%;
+}
+
+
+/*-----------------MEDIA QUERIES-------------------------*/
+
+@media screen and (max-width: 480px) {
+    .left {
+        text-align: center;
+        top: 200px;
+    }
+    .right,
+    .container {
+        top: 250px;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        margin: 10px auto;
+        width: 100%;
+    }
 }
