--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,18 +14,18 @@ body {
 
 main {
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex-flow: row wrap;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 0 auto;
+    min-height: 100vh;
 }
 
 .left {
     display: block;
     width: 500px;
-    margin: 25px 55px;
+    margin: 0 55px;
 }
 
 h1 {
@@ -56,13 +56,14 @@ p {
     width: 500px;
     min-height: 100vh;
     align-items: center;
+    top: 0;
 }
 
 .btn-top {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     font-weight: 300;
-    height: 55px;
+    padding: 20px 25px;
     background-color: hsl(248, 32%, 49%);
     color: white;
     border-radius: 10px;
@@ -77,35 +78,35 @@ p {
     background-color: hsl(250, 34%, 31%);
 }
 
-.container {
-    width: 100%;
-    display: block;
-    margin-top: 25px;
+#form {
     background-color: #fff;
-    border-radius: 10px;
-    height: auto;
-    box-shadow: 0 8px #d36563;
-    box-sizing: border-box;
-    padding-bottom: 30px;
+    border-radius: 8px;
+    box-shadow: 0 6px rgba(0, 0, 0, 0.2);
+    padding: 40px;
+    margin-bottom: 20px;
+    margin-top: 25px;
+    text-align: center;
+    width: 100%;
 }
 
 input {
-    width: 85%;
-    margin: 10px 20px 0px 35px;
-    height: 50px;
     border-radius: 5px;
-    border: 1.5px solid hsl(246, 25%, 77%);
-    outline: none;
+    border: 1.3px solid hsl(246, 25%, 77%);
     font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    padding-left: 30px;
+    font-size: 14px;
+    font-weight: 500;
+    display: block;
+    width: 100%;
+    height: 50px;
+    outline: none;
     color: #303030;
     flex-direction: column;
+    padding-left: 30px;
 }
 
 input:placeholder-shown {
     font-family: 'Poppins', sans-serif;
-    font-weight: 700;
+    font-weight: 500;
     color: gray;
     padding: 0 30px;
 }
@@ -114,39 +115,69 @@ input:focus {
     border: 1px solid hsl(248, 32%, 49%);
 }
 
-input:nth-child(2) {
-    margin-top: 35px;
+
+/*----------------------ERROR MESSAGE----------------*/
+
+small {
+    position: relative;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 10px;
+    font-weight: 300;
+    font-style: italic;
+    margin-bottom: 20px;
+    margin-top: 5px;
 }
 
+.form-mng {
+    position: relative;
+}
 
-/* NEED TO WORK ON SMALL PART
-.form-control small {
+.form-mng img {
     opacity: 0;
+    position: absolute;
+    top: 30%;
+    right: 15px;
+    transform: translateY(-50%);
+    height: 20px;
 }
 
-.form-control.error small {
+.form-mng.error img {
     opacity: 1;
 }
 
-small {
-    display: block;
-    color: #bbb;
-    font-size: 11px;
-    font-weight: 500;
-    margin-top: 15px;
+.form-mng small {
+    opacity: 0;
 }
 
-small a {
+.form-mng.error small {
+    opacity: 1;
+}
+
+.form-mng.error input {
+    border-color: hsl(0, 100%, 74%);
+    color: hsl(0, 100%, 74%);
+}
+
+.form-mng.error input::placeholder {
+    color: hsl(0, 100%, 74%);
+}
+
+.form-mng small {
     color: hsl(0, 100%, 74%);
     font-weight: 600;
-    text-decoration: none;
+    position: absolute;
+    z-index: 10;
+    right: 0;
+    opacity: 0;
+    text-align: right;
 }
 
-*/
+
+/*----------------------BUTTON BOMTTOM--------------*/
 
 .btn-bottom {
     background-color: hsl(154, 59%, 51%);
-    width: 85%;
+    width: 100%;
     height: 45px;
     color: white;
     font-family: 'Poppins', sans-serif;
@@ -154,9 +185,15 @@ small a {
     border: none;
     border-radius: 6px;
     box-shadow: 0 4px #42B380;
-    margin: 20px 20px 0px 35px;
     outline: none;
     cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.btn-bottom:active,
+.btn-top:active {
+    border-bottom-width: 1px;
+    transform: translateY(2px);
 }
 
 .btn-bottom:hover {
@@ -164,19 +201,19 @@ small a {
 }
 
 .box-small {
-    width: 85%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
 
 .small-letters {
     font-family: 'Poppins', sans-serif;
-    font-size: .6em;
+    font-size: 10px;
     font-weight: 500;
     color: rgb(182, 182, 182);
     text-align: center;
     margin-top: -20px;
-    width: 100%;
+    color: #aaa;
 }
 
 
@@ -187,14 +224,11 @@ small a {
         width: 100%;
         text-align: center;
         justify-content: center;
-        margin-top: 15%;
+        margin-top: 100px;
     }
     h1 {
         font-size: 2rem;
         line-height: 40px;
-    }
-    .btn-top {
-        height: 90px;
     }
     p {
         font-size: 1rem;
@@ -202,10 +236,11 @@ small a {
     }
     .right {
         width: 85%;
-        margin-top: -90px;
     }
-    input,
     .btn-bottom {
         margin: 8px auto;
+    }
+    .btn-top {
+        padding: 30px 45px;
     }
 }
