--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,9 +54,7 @@ p {
     justify-content: center;
     flex-direction: column;
     width: 500px;
-    min-height: 100vh;
     align-items: center;
-    top: 0;
 }
 
 .btn-top {
@@ -219,12 +217,12 @@ small {
 
 /*-----------------MEDIA QUERIES-------------------------*/
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 320px) and (max-width: 768px) {
     main {
         width: 100%;
         text-align: center;
         justify-content: center;
-        margin-top: 100px;
+        margin-top: 60px;
     }
     h1 {
         font-size: 2rem;
@@ -236,6 +234,7 @@ small {
     }
     .right {
         width: 85%;
+        margin-top: 60px;
     }
     .btn-bottom {
         margin: 8px auto;
